# docintel

./: .gitignore  CLAUDE.md  PLAN-01-project-scaffolding.md  PLAN-02-webgpu-model-inference.md  PLAN-03-pdf-parsing-document-intake.md  PLAN-04-single-doc-qa-chat.md  PLAN-05-embedding-vector-store.md  PLAN-06-rag-pipeline.md  PLAN-07-dataset-curation.md  PLAN-08-fine-tuning-unsloth.md  PLAN-09-onnx-export-quantization.md  PLAN-10-contract-analyzer-ui.md  PLAN-11-medical-financial-legal-uis.md  PLAN-12-pwa-offline.md  PLAN-13-monetization-auth.md  PLAN-14-landing-page-launch.md  PLAN-15-testing-qa.md  PLAN-16-cicd-deployment.md  PLAN-17-performance-benchmarking.md  PLAN-18-security-privacy-audit.md  README.md  package.json  pnpm-lock.yaml  prettier.config.js
.claude/agents/: ai-engineer.md  devils-advocate.md  ml-engineer.md  principal-architect.md  product-owner.md  qa-engineer.md
fine-tuning/: pyproject.toml
fine-tuning/configs/: olive_config.json  training_config.yaml
fine-tuning/datasets/contracts/: test.json  train.json  validation.json
fine-tuning/datasets/financial/: test.json  train.json  validation.json
fine-tuning/datasets/legal/: test.json  train.json  validation.json
fine-tuning/datasets/medical/: test.json  train.json  validation.json
fine-tuning/schemas/: contract_schema.json  financial_schema.json  legal_schema.json  medical_schema.json
fine-tuning/scripts/: export_onnx.py  merge_adapter.py  prepare_contracts.py  prepare_financial.py  prepare_legal.py  prepare_medical.py  quantize_olive.py  shared.py  train_qlora.py  validate_dataset.py
(+72 files in other folders)
